# neural-astar

./: .dockerignore  .gitignore  .gitmodules  200.html  Dockerfile  LICENSE  README.md  css.bundle.js  css.bundle.js.LICENSE.txt  docker-compose.yml  example.ipynb  index.bundle.js  index.html  pyproject.toml  setup.py  train.py
data/: cnn_mazes.pt  mazes_032_moore_c8.npz
docker/: Dockerfile
model/mazes_032_moore_c8/: best.pt
model/mazes_032_moore_c8/lightning_logs/version_0/checkpoints/: epoch=33-step=272.ckpt
neural_astar/planner/: astar.py
neural_astar/utils/: training.py
notebooks/: example.ipynb  example_warcraft.ipynb
planning_experiment/: runner.py
planning_experiment/planners/: __init__.py  _base.py  _il_planner.py  _il_utils.py  astar.py  sail.py  sail_gpu.py
planning_experiment/utils/: SDD.py  __init__.py  data.py  mechanism.py  metrics.py  utils.py  visualization.py
scripts/: 0_MP.sh  1_TiledMP.sh  2_CSM.sh  3_SDD.sh  create_gif.py  show_results.py  show_results_sdd.py  train.py  train_ptl.py  train_sdd.py  train_warcraft.py  visualize_results.py  visualize_results_sdd.py
scripts/config/: bb_astar.gin  common.gin  create_gif.yaml  important_parameters.json  macros.gin  neural_astar.gin  sail.gin  sail_gpu.gin  train.yaml  train_warcraft.yaml  vanilla_astar.gin
src/neural_astar/planner/: __init__.py  astar.py  differentiable_astar.py  encoder.py  pq_astar.py
src/neural_astar/utils/: data.py  training.py
tests/: astar_test.py
